// Entropy data plane and control plane protocol for the TDC-based entropy pipeline.
//
// Defines the gRPC service and message types used to transport radioactive decay
// events from Raspberry Pi edge gateways to the cloud processor backend, along with
// acknowledgment, configuration, and health monitoring messages.
//
// Maintained by: entropy-processor (Quarkus) and entropy-tdc-gateway (Go).
syntax = "proto3";

package entropy;

option go_package = "entropy-tdc-gateway/pkg/pb";
option java_package = "com.ammann.entropy.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "EntropyProto";

// Checksum algorithm applied to batch event data before transmission.
enum ChecksumAlgo {
  CHECKSUM_ALGO_UNSPECIFIED = 0;
  CHECKSUM_SHA256 = 1;
}

// Digital signature algorithm applied to batch integrity envelope.
enum SignatureAlgo {
  SIGNATURE_ALGO_UNSPECIFIED = 0;
  SIGNATURE_ED25519 = 1;
}

// Compression algorithm applied to the events payload within a batch.
enum Compression {
  COMPRESSION_NONE = 0;
  COMPRESSION_ZSTD = 1;
}

// Statistics from the Von Neumann debiasing and hash conditioning stage
// applied at the edge before transmission.
message WhiteningStats {
  uint32 input_bits = 1;          // Number of raw bits before whitening.
  uint32 output_bits = 2;         // Number of bits after whitening.
  double extraction_rate = 3;     // Ratio of output_bits to input_bits.
}

// Lightweight statistical test results computed at the edge.
// Optionally includes NIST SP 800-90B health test window sizes.
message TestSummary {
  double freq_pvalue = 1;         // P-value from frequency (monobit) test.
  double runs_pvalue = 2;         // P-value from runs test.
  optional double rct_stat = 3;   // Repetition Count Test statistic.
  optional double apt_stat = 4;   // Adaptive Proportion Test statistic.
  optional uint32 rct_window = 5; // Window size used for the RCT, in samples.
  optional uint32 apt_window = 6; // Window size used for the APT, in samples.
}

// Free-form key-value metadata attached to a batch or device.
message KvMeta {
  map<string, string> labels = 1; // Arbitrary labels such as location or sensor ID.
}

// Request to subscribe to a server-to-client batch stream.
message SubscriptionRequest {
  // Unique identifier for the subscribing client (e.g., "quarkus-validator-1").
  string client_id = 1;
}

// Primary gRPC service for entropy data ingestion, broadcast, and gateway control.
service EntropyStream {
  // Bidirectional data stream: receives EntropyBatch from the edge gateway and
  // returns Ack messages indicating processing success or failure.
  rpc StreamEntropy(stream EntropyBatch) returns (stream Ack);

  // Server-to-client stream: broadcasts received batches to subscribing processor
  // clients such as frontend dashboards or secondary processors.
  rpc SubscribeBatches(SubscriptionRequest) returns (stream EntropyBatch);

  // Bidirectional control stream for gateway configuration, health reporting,
  // and latency measurement via ping/pong.
  rpc Control(stream ControlMessage) returns (stream ControlMessage);
}

// A batch of TDC events transmitted from the edge gateway to the cloud backend.
message EntropyBatch {
  // Ordered list of individual decay events captured in this batch.
  repeated TDCEvent events = 1;
  EdgeMetrics metrics = 2;              // Aggregated edge validation metrics for this batch.
  uint64 batch_timestamp_us = 3;        // Batch creation time in microseconds since Unix epoch.
  uint32 batch_sequence = 4;            // Monotonically increasing sequence number per gateway session.

  string source_id = 5;                 // Identifier of the sending gateway (e.g., "raspi-07").
  uint64 t_start_us = 6;               // Capture window start in microseconds since Unix epoch.
  uint64 t_end_us = 7;                 // Capture window end in microseconds since Unix epoch.
  bytes checksum = 8;                   // Checksum over raw (pre-compression) event data.
  ChecksumAlgo checksum_algo = 9;       // Algorithm used to compute the checksum.

  optional bytes signature = 10;        // Cryptographic signature over events, checksum, and header.
  optional SignatureAlgo signature_algo = 11; // Algorithm used for the signature.

  Compression compression = 12;         // Compression applied to the events payload.
  uint32 dropped_events = 13;           // Number of events lost or discarded at the edge.
  optional WhiteningStats whitening = 14; // Whitening and extraction statistics from edge conditioning.
  optional TestSummary tests = 15;       // Detailed edge-side statistical test results.
  KvMeta meta = 16;                      // Free-form metadata labels (e.g., site, serial number).

}

// A single time-to-digital converter (TDC) event representing one detected radioactive decay.
message TDCEvent {
  uint64 rpi_timestamp_us = 1;  // Gateway ingestion timestamp in microseconds since Unix epoch (assigned when MQTT event is received at edge).
  uint64 tdc_timestamp_ps = 2;  // TDC hardware timestamp in picoseconds (sub-nanosecond resolution).
  uint32 channel = 3;           // TDC input channel (typically 0 for single-channel setups).
  optional int64 delta_ps = 4;  // Time delta to the previous event in picoseconds, if computed at the edge.
  optional uint32 flags = 5;    // Bit flags for anomaly indicators (e.g., saturation, counter overrun).
  bytes whitened_entropy = 6;   // 32-byte SHA-256 output of DualStageWhitening over canonical event bytes (little-endian uint64 tdc_timestamp_ps).
}

// Aggregated validation metrics computed at the edge for a single batch.
message EdgeMetrics {
  double quick_shannon_entropy = 1;     // Shannon entropy estimate in bits, computed over batch intervals.
  bool frequency_test_passed = 2;       // Whether the NIST frequency (monobit) test passed.
  bool runs_test_passed = 3;            // Whether the NIST runs test passed.
  uint32 pool_size = 4;                 // Number of events in the edge entropy pool at batch creation.
  uint64 processing_latency_us = 5;     // Edge-side batch processing latency in microseconds.
  optional double bias_ppm = 6;         // Estimated bit bias in parts per million.
  optional bool rct_passed = 7;         // Whether the lightweight Repetition Count Test passed (telemetry only).
  optional bool apt_passed = 8;         // Whether the lightweight Adaptive Proportion Test passed (telemetry only).
}

// Acknowledgment sent from the cloud backend to the edge gateway after batch processing.
message Ack {
  bool success = 1;                          // Whether the batch was processed successfully.
  uint32 received_sequence = 2;              // Batch sequence number being acknowledged.
  string message = 3;                        // Human-readable status or error description.
  repeated uint32 missing_sequences = 4;     // Sequence numbers missing from expected order (for diagnostics).
  optional uint64 received_at_us = 5;        // Server reception time in microseconds since Unix epoch.
  optional bool backpressure = 6;            // If true, the edge gateway should reduce its send rate.
  optional string backpressure_reason = 7;   // Explanation of the backpressure condition.
}

// Tunable gateway configuration parameters sent from the cloud to the edge.
// Full NIST SP 800-90B validation runs in the cloud; these thresholds govern
// lightweight edge-side checks only.
message ConfigUpdate {
  optional uint32 target_batch_size = 1;     // Target number of events per batch.
  optional uint32 max_rps = 2;               // Maximum requests per second the gateway should send.
  optional uint32 rct_window = 3;            // Window size for the edge Repetition Count Test, in samples.
  optional uint32 apt_window = 4;            // Window size for the edge Adaptive Proportion Test, in samples.
  optional double freq_warn_ppm = 5;         // Bias warning threshold in parts per million.
  optional bool enable_zstd = 6;             // Whether the gateway should enable Zstandard compression.
}

// Health status report sent from the edge gateway to the cloud via the control stream.
message HealthReport {
  bool ready = 1;                   // Whether the gateway is ready to accept configuration (mirrors /ready).
  bool healthy = 2;                 // Whether the gateway considers itself healthy (mirrors /health).
  uint32 pool_size = 3;            // Current size of the edge entropy event pool.
  uint64 last_ack_latency_us = 4;  // Round-trip latency of the most recent acknowledgment, in microseconds.
  string summary = 5;              // Free-text summary of recent errors, reconnections, or warnings.
}

// Negative acknowledgment indicating an expected batch was not received or was invalid.
message Nack {
  uint32 expected_sequence = 1;     // The batch sequence number that was expected.
  string reason = 2;                // Reason for rejection (e.g., "checksum mismatch", "schema error").
}

// Latency probe sent from one side of the control stream.
message Ping { uint64 ts_us = 1; } // Sender timestamp in microseconds since Unix epoch.
// Latency probe response echoing the original timestamp.
message Pong { uint64 ts_us = 1; } // Echoed sender timestamp in microseconds since Unix epoch.

// Initial handshake message sent by the edge gateway when opening a control stream.
message Hello {
  string source_id = 1;    // Unique identifier of the gateway (e.g., "raspi-07").
  string version = 2;      // Software version of the gateway firmware.
  KvMeta meta = 3;         // Additional metadata about the gateway environment.
}

// Envelope for all control plane messages exchanged over the bidirectional control stream.
message ControlMessage {
  oneof payload {
    Hello hello = 1;
    ConfigUpdate config_update = 2;
    HealthReport health_report = 3;
    Ping ping = 4;
    Pong pong = 5;
  }
}
